# miso

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  miso_messages_python_agent.ipynb  pyproject.toml  requirements.txt  run_tests.sh  verify_models.py
.claude/: CLAUDE.md
.claude/commands/: add-harness.md  add-model.md  add-provider.md  add-tool.md  add-toolkit.md  debug-stream.md  explore.md  sync-packages.md  test.md
.github/skills/: agent-and-team.md  architecture-overview.md  creating-builtin-toolkits.md  memory-system.md  runtime-engine.md  (+2 more)
LangChain_demos/: ollama_demo.ipynb
demos/: codex_demo_output.py  demo_agent_team.ipynb  demo_claude_openai_pdf_png.ipynb  demo_codex5_claude46_plane_game.ipynb  demo_gpt5_and_codex.ipynb  demo_ollama.ipynb  demo_openai.ipynb
docs/: README.en.md  README.zh-CN.md  new_models.md
examples/: new_models_usage.py
miso/: __init__.py  agent.py  broth.py  builtin_tools.py  endpoint.py  human_input.py  mcp.py  media.py  memory.py  memory_qdrant.py  model_capabilities.json  model_default_payloads.json  predefined_tools.py  response_format.py  team.py  tool.py  tool_registry.py  toolkit_catalog.py  workspace_pins.py
scripts/: init_python312_venv.ps1  init_python312_venv.sh
tests/: __init__.py  conftest.py  test_access_workspace_toolkit.py  test_agent_core.py  test_agent_team.py  test_anthropic_smoke.py  test_broth_core.py  test_builder_missing_tool_policy.py  test_builtin_toolkit.py  test_character.py  test_code_toolkit.py  test_confirmation_interact_propagation.py  test_confirmation_policy_interact_fields.py  test_core_toolkit.py  test_core_write_edit_code_diff.py  test_deferred_tool_compaction.py  test_diff_helpers.py  test_eval_harness.py  test_file_cache.py  test_gemini_smoke.py  test_git_toolkit.py  test_human_input.py  test_input_media.py  test_input_types.py  test_kernel_agent.py  test_kernel_core.py  test_kernel_memory.py  test_kernel_model_io.py  test_kernel_optimizers.py  test_kernel_runtime.py  test_kernel_subagents.py  test_mcp.py  test_memory.py  test_memory_qdrant_openai_embed.py  test_new_models.py  test_ollama_smoke.py  test_openai_family_smoke.py  test_predefined_toolkit.py  test_pupu_mcp.py  test_retry_backoff.py  (+20 more)
(+358 files in other folders)
